change mongo url

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # MongoDB URI
 # MONGO_URI=mongodb://localhost:27017/neosoft
-MONGO_URI=mongodb+srv://venuneosoft:aKYMH7Xyljo8vS0v@cluster0.uzby2k4.mongodb.net/neosoft?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://venuneosoft:aKYMH7Xyljo8vS0v@cluster0.uzby2k4.mongodb.net/
 
 # Port
 PORT=5000
