--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "starts": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-
- 
   },
   "keywords": [],
   "author": "",
@@ -18,6 +16,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
