--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
